fix(list): ensure dividers are visually separating items more
The list dividers were hard to notice since they were
visually too close to their pervious and next list items.
It made the UI a bit too noisy, while making it hard to
quickly notice the dividers.

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -47,7 +47,15 @@ ul {
     align-items: center;
     gap: 0.75rem;
     height: auto;
-    padding: 0 0.5rem;
+    padding: 0 0.25rem;
+
+    margin-bottom: 0.5rem;
+    &:not(:first-child) {
+        margin-top: 0.75rem;
+    }
+    :host(.has-striped-rows) & {
+        margin-top: 0.5rem;
+    }
 }
 
 .limel-list-divider-line {
